[package]
name = "khmercut"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A blazingly fast Khmer word segmentation tool written in Rust."
homepage = "https://github.com/seanghay/khmercut-rs"
repository = "https://github.com/seanghay/khmercut-rs"
include = [
	"**/*.rs",
	"Cargo.toml",
	"**/*.crfsuite",
	"README.md",
	"LICENSE"
]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crfs = "0.2.0"
regex = "1.10.0"

[profile.release]
opt-level = 3

